--- a/ManifestX/ManifestX.csproj
+++ b/ManifestX/ManifestX.csproj
@@ -3,7 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
-    <RootNamespace>VukManifestX</RootNamespace>
+    <RootNamespace>ManifestX</RootNamespace>
     <ApplicationManifest>app1.manifest</ApplicationManifest>
     <Platforms>x86;x64;ARM64</Platforms>
     <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
@@ -24,6 +24,7 @@
     <Content Include="Assets\Square44x44Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +40,7 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
   </ItemGroup>
@@ -51,14 +53,8 @@
     <Folder Include="manifests\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\Desktop\ChatGPT Image Apr 19, 2025, 03_58_20 PM.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\VukBrigadier\VukBrigadier.csproj" />
-    <ProjectReference Include="..\VukXML\VukXML.csproj" />
+    <ProjectReference Include="..\Brigadier\Brigadier.csproj" />
+    <ProjectReference Include="..\VXPASerializer\VXPASerializer.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Page Update="ManifestCreator.xaml">
@@ -93,5 +89,7 @@
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
     <PackageIcon>ChatGPT Image Apr 19, 2025, 03_58_20 PM.png</PackageIcon>
     <DefaultLanguage>sr-latn-rs</DefaultLanguage>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <WindowsPackageType>None</WindowsPackageType>
   </PropertyGroup>
 </Project>
