--- a/Brigadier/Brigadier.csproj
+++ b/Brigadier/Brigadier.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VukXML\VukXML.csproj" />
+    <ProjectReference Include="..\VXPASerializer\VXPASerializer.csproj" />
   </ItemGroup>
 
 </Project>
