--- a/Brigadier/Brigadier.csproj
+++ b/Brigadier/Brigadier.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
+    
     <ProjectReference Include="..\VXPASerializer\VXPASerializer.csproj" />
   </ItemGroup>
+  
 
 </Project>
