--- a/ManifestX/ManifestX.csproj
+++ b/ManifestX/ManifestX.csproj
@@ -17,6 +17,7 @@
     <None Remove="Card.xaml" />
     <None Remove="ManifestCreator.xaml" />
     <None Remove="ManifestList.xaml" />
+    <None Remove="ManifestSettings.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,6 +43,7 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.WinUI.Notifications" Version="7.1.2" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
@@ -52,7 +54,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Configuration\" />
     <Folder Include="manifests\" />
+    <Folder Include="temp\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Brigadier\Brigadier.csproj" />
@@ -62,6 +66,11 @@
     <Content Update="Assets\static.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="ManifestSettings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="ManifestList.xaml">
@@ -104,5 +113,6 @@
     <WindowsPackageType>MSIX</WindowsPackageType>
     <AppInstallerUri>C:\Users\Administrator\AppData\Roaming\.manifestsv</AppInstallerUri>
     <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 </Project>
